--- a/views/form.ejs
+++ b/views/form.ejs
@@ -1,17 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-    <meta name="description" content="" />
-    <meta name="author" content="" />
-    <title>Clean Blog </title>
-    <link rel="icon" type="image/x-icon" href="../public/assets/favicon.ico" />
-     <link href="../public/css/styles.css" rel="stylesheet" /><!-- CSS only -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
-   <body>
-    
-  
-<header class="masthead">
+<meta charset="utf-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+<meta name="description" content="" />
+<meta name="author" content="" />
+<title>Clean Blog </title>
+<link rel="icon" type="image/x-icon" href="../public/assets/favicon.ico" />
+<link href="../public/css/styles.css" rel="stylesheet" /><!-- CSS only -->
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
+  integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+
+<body>
+
+  <!-- trang form cua ad -->
+
+  <header class="masthead">
     <div class="overlay"></div>
     <div class="container">
       <div class="row">
@@ -51,7 +54,7 @@
         </form>
       </div>
     </div>
-  </div> 
+  </div>
 </body>
-  </html>
 
+</html>
